--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "@mui/material": "^5.10.0",
     "@mui/styles": "^5.9.3",
     "@mui/system": "^5.10.0",
+    "@mui/x-date-pickers": "^6.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash": "^4.14.192",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "apisauce": "^2.1.5",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.1",
+    "dayjs": "^1.11.7",
     "i18next": "^21.9.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
