--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^21.9.0",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.3",
