--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.7",
     "i18next": "^21.9.0",
     "js-cookie": "^3.0.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
