--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/string-format": "^2.0.0",
     "apisauce": "^2.1.5",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.1",
@@ -38,6 +39,7 @@
     "reduxsauce": "^1.2.1",
     "reselect": "^4.1.6",
     "sass": "^1.54.3",
+    "string-format": "^2.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
